fix filter product on mobile

--- a/sass/_filter.sass
+++ b/sass/_filter.sass
@@ -86,12 +86,12 @@
         overflow-x: hidden
         position: absolute
         width: auto
-        left: 173px
+        left: 160px
         .sort-list
           background-color: $white
           width: 100%
           right: -20px
-          padding-left: 0
+          padding-left: 20px
           .checkbox
             padding: 29.1px 20px
             .sort-text
@@ -230,6 +230,7 @@
                   &:after
                     right: 8px
         .filter-option
+          left: 146px
           .sort-list
             padding-left: 0
             .checkbox
@@ -248,3 +249,23 @@
     top: 6px
     left: 0
     z-index: 2
+
++until($screen-xxs-min)
+  .modal-filter
+    .modal-card
+      .modal-card-body
+        .fiter-side
+          width: 130px
+          .tabs
+            ul
+              li
+                a
+                  padding: 20px 20px 20px 10px
+                &.is-active
+                  &:after
+                    right: 8px
+        .filter-option
+          left: 130px
+          .sort-list
+            right: -10px
+            padding-right: 0
