--- a/sass/modules/_variable.sass
+++ b/sass/modules/_variable.sass
@@ -201,5 +201,6 @@ $shadow_sticky: 0 12px 12px 0 $color_shadow_sticky1, 0 0 12px 0 $color_shadow_st
 $shadow_detail:  0 2px 3px 0 $color_shadow_discuss
 $bg_linear:  linear-gradient(to bottom, #404852, rgba(64, 72, 82, 0))
 $screen-xs-min: 480px
+$screen-xxs-min: 320px
 $shadow-modal-head:  0 2px 6px 0 #eaedef
 $shadow-option-dropdown:  0 5px 20px 0 rgba(0, 0, 0, 0.15)
